--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,12 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 4
-end_of_line = crlf
+indent_size = 2
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,xml}]
+[*.{ps1,psd1,psm1}]
 indent_style = space
-indent_size = 2
+indent_size = 4
